fixing /refactoring